# libemathparser

./: CMakeLists.txt  LICENSE  README.md  easy-math-parser.pro  main.cpp
.github/workflows/: cmake-multi-platform.yml  cmake_build_package.yml
common/: QFileHelper.h  common.pri
debian/: changelog  control  copyright
examples/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  MainWindow.ui  examples.pro  main.cpp
examples/common/: QFileHelper.cpp
examples/test_data/: generate.py
gui_test/: MainWindow.cpp
muparser_engine/: CMakeLists.txt  OperaionByMuParser.cpp  OperaionByMuParser.h  muParserBase.cpp  muParserFixes.h  muparser_engine.pri  muparser_engine.pro
parser_qt/: CMakeLists.txt  easy_parser_qt.cpp  easy_parser_qt.h  parser_qt.pri  parser_qt.pro
parser_std/: CMakeLists.txt  easy_parser_std.cpp  easy_parser_std.h  parser_std.pri  parser_std.pro
test_data/: basic_test.txt
